Improve accuracy of positioning of elements in applet layout

Avoids overlapping of applets by always using the latest calculated
item position (since the x, y values might not be updated yet),
iterates cell-by-cell to find the closes available position and
accounts for both distance and change in size when choosing for
the best free space available.

BUG:497137